// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: critical 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <!---->
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-state-critical-base);"
  >
    warning
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: critical 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <span>
    Ongoing
  </span>
</div>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: major 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <!---->
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-state-major-base);"
  >
    warning
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: major 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <span>
    Ongoing
  </span>
</div>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: minor 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <!---->
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-state-minor-base);"
  >
    warning
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: minor 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <span>
    Ongoing
  </span>
</div>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: ok 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <!---->
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-state-ok-base);"
  >
    warning
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: ok 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <span>
    Ongoing
  </span>
</div>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: cancelled 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <!---->
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-cancelled-base);"
  >
    highlight_off
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: cancelled 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <span>
    Canceled
  </span>
</div>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: closed 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <!---->
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-closed-base);"
  >
    check_circle_outline
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: closed 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <span>
    Closed
  </span>
</div>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: flapping 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <!---->
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-flapping-base);"
  >
    swap_vert
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: flapping 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <span>
    Flapping
  </span>
</div>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: noEvents 1`] = `
<c-no-events-icon-stub
  color="error"
  top=""
  value="1386435600000"
/>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: noEvents 2`] = `undefined`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: stealthy 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <!---->
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-stealthy-base);"
  >
    swap_vert
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: stealthy 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <span>
    Stealth
  </span>
</div>
`;
